--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "guan",
   "version": "1.0.0",
-  "description": "node @14.20.1",
+  "description": "node @16.15.0",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "method-override": "^3.0.0",
+    "mongoose": "^7.4.1",
     "nodemon": "^3.0.1"
   }
 }
